--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 MODE=development
-GITHUB_API_ENDPOINT=https://api.github.com
+VBRINC_API_ENDPOINT=https://127.0.0.1:8000/
+VBRINC_GENERAL_URL=http://vbrinc.test/
