--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.2",
     "helmet": "^3.12.1",
     "humps": "^2.0.1",
+    "immutability-helper": "^3.0.0",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.1.0",
@@ -27,8 +28,10 @@
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.6.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
@@ -36,16 +39,16 @@
   "version": "1.0.0",
   "main": "server/index.js",
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.4.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.0.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-module-resolver": "^3.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.12.1",
     "pre-commit": "^1.2.2",
