--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 MODE=development
-VBRINC_API_ENDPOINT=https://127.0.0.1:8000/
-VBRINC_GENERAL_URL=http://vbrinc.test/
+VBRINC_API_ENDPOINT=https://192.168.0.18:8000/
+VBRINC_GENERAL_URL=http://marketplace.vbrinc.ro/
