--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@zeit/next-css": "^1.0.1",
+    "antd": "^3.18.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.1",
