--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-google-font-loader": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.6.0",
     "react-redux": "^6.0.0",
