--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-particles-js": "^2.6.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.0",
+    "react-snapshot": "^1.3.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
     "redux-logger": "^3.0.6",
