add google analytics code

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-ga": "^2.6.0",
     "react-google-font-loader": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-moment": "^0.9.2",
@@ -83,10 +84,6 @@
     "lint:fix": "standard --fix --verbose | snazzy"
   },
   "lint-staged": {
-    "*.js": [
-      "yarn lint:fix",
-      "git add"
-    ]
   },
   "standard": {
     "parser": "babel-eslint",
