--- a/package.json
+++ b/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "react-final",
+  "repository": "git@github.com:VBRNetwork/react_final.git",
+  "author": "VBR Inc",
+  "license": "VBR Licence",
+  "description": "Marketplace VBRInc",
+  "version": "1.5.1",
+  "main": "server/index.js",
+  "scripts": {
+    "lint-staged": "lint-staged",
+    "build": "NODE_ENV=production next build",
+    "test:ci": "jest --maxWorkers=2 --ci",
+    "test": "jest --watch",
+    "start": "nodemon -w server server/index.js",
+    "serve": "NODE_ENV=production node server/index.js",
+    "clean": "rimraf node_modules/.cache .next",
+    "lint": "standard --verbose | snazzy",
+    "now-start": "yarn serve",
+    "lint:fix": "standard --fix --verbose | snazzy"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -47,9 +66,6 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
-  "name": "nextjs-redux-starter",
-  "version": "1.0.0",
-  "main": "server/index.js",
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "babel-core": "7.0.0-bridge.0",
@@ -74,25 +90,6 @@
     "styled-jsx-css-loader": "^0.3.0",
     "webpack-bundle-analyzer": "^3.0.2"
   },
-  "scripts": {
-    "lint-staged": "lint-staged",
-    "build": "NODE_ENV=production next build",
-    "test:ci": "jest --maxWorkers=2 --ci",
-    "test": "jest --watch",
-    "start": "nodemon -w server server/index.js",
-    "serve": "NODE_ENV=production node server/index.js",
-    "clean": "rimraf node_modules/.cache .next",
-    "lint": "standard --verbose | snazzy",
-    "now-start": "yarn serve",
-    "lint:fix": "standard --fix --verbose | snazzy"
-  },
-  "lint-staged": {},
-  "standard": {
-    "parser": "babel-eslint",
-    "env": [
-      "jest"
-    ]
-  },
   "engines": {
     "node": ">= 8"
   },
@@ -106,10 +103,5 @@
     "setupFilesAfterEnv": [
       "<rootDir>/src/test/jest.setup.js"
     ]
-  },
-  "repository": "CodementorIO/nextjs-redux-starter",
-  "bugs": "https://github.com/CodementorIO/nextjs-redux-starter/issues",
-  "author": "Ian Wang <gogoenwon@gmail.com> (https://github.com/IanWang)",
-  "license": "ISC",
-  "description": "Opinionated Next.js starter with Express, Redux, SASS, and Jest."
+  }
 }
