--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.1",
+    "connected-next-router": "^1.0.2",
     "express": "^4.16.2",
     "final-form": "^4.18.5",
     "helmet": "^3.12.1",
