--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "immutability-helper": "^3.0.0",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "^3.0.0",
+    "jwt-decode": "^2.2.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "next": "^8.1.0",
