--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.23.6",
+    "apexcharts": "^3.10.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.1",
@@ -49,6 +50,7 @@
     "normalize-scss": "^7.0.1",
     "prop-types": "^15.6.1",
     "react": "^16.10.2",
+    "react-apexcharts": "^1.3.3",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.10.2",
     "react-final-form": "^6.3.0",
