--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-ga": "^2.7.0",
     "react-google-font-loader": "^1.1.0",
     "react-helmet": "^5.2.0",
+    "react-milestone": "^1.0.5",
     "react-moment": "^0.9.6",
     "react-moment-countdown": "^0.3.0",
     "react-particles-js": "^2.7.0",
