--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-snapshot": "^1.3.0",
+    "react-vertical-timeline-component": "^2.5.0",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-logger": "^3.0.6",
