--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "immutability-helper": "^3.0.1",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "^3.0.0",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
