--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.10.2",
     "react-apexcharts": "^1.3.3",
     "react-circular-progressbar": "^2.0.2",
+    "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.2",
     "react-final-form": "^6.3.0",
     "react-fullstory-component": "^2.1.0",
