--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 MODE=development
-VBRINC_API_ENDPOINT=https://192.168.0.18/
-VBRINC_GENERAL_URL=http://marketplace.vbrinc.ro/
+VBRINC_API_ENDPOINT=https://veelancing.io/api/
+VBRINC_GENERAL_URL=http://veelancing.io
