--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.3.1",
     "compression": "^1.7.1",
     "connected-next-router": "^1.0.2",
+    "emoji-picker-react": "^3.1.0",
     "express": "^4.17.1",
     "final-form": "^4.18.5",
     "helmet": "^3.21.1",
