--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-moment-countdown": "^0.3.0",
     "react-particles-js": "^2.7.0",
     "react-redux": "^6.0.0",
+    "react-reveal-text": "^0.1.1",
     "react-router-dom": "^5.1.2",
     "react-snapshot": "^1.3.0",
     "react-vertical-timeline-component": "^2.5.0",
