--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.10.2",
     "react-apexcharts": "^1.3.3",
+    "react-chat-elements": "^10.8.0",
     "react-circular-progressbar": "^2.0.2",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.2",
