add reviews, certifications , portfolio

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 MODE=development
 VBRINC_API_ENDPOINT=https://veelancing.io/api/
 VBRINC_GENERAL_URL=http://veelancing.io
+ANALYZE=false
