--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "responsive-ant-menu": "^1.0.10",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
