--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-define": "^2.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.0",
     "jest": "^24.9.0",
