--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "jest": "^24.9.0",
     "lint-staged": "^8.2.1",
     "nodemon": "^1.19.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pre-commit": "^1.2.2",
     "raf": "^3.4.0",
     "react-test-renderer": "^16.10.2",
