--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "responsive-ant-menu": "^1.0.10",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "terser-webpack-plugin": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
