--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "helmet": "^3.21.1",
     "here-maps-react": "^0.1.3",
     "humps": "^2.0.1",
+    "i18next": "^19.0.3",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "immutability-helper": "^3.0.1",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "^3.0.0",
@@ -64,6 +67,7 @@
     "react-google-font-loader": "^1.1.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.0",
+    "react-i18next": "^9.0.10",
     "react-milestone": "^1.0.5",
     "react-moment": "^0.9.7",
     "react-moment-countdown": "^0.3.0",
