--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-apexcharts": "^1.3.3",
     "react-chat-elements": "^10.8.0",
     "react-circular-progressbar": "^2.0.2",
+    "react-cookie-consent": "^3.0.0",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.2",
     "react-final-form": "^6.3.0",
