--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
+    "antd-form-builder": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
