--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:fix": "standard --fix --verbose | snazzy"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.2",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
