--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwt-decode": "^2.2.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
+    "net": "^1.0.2",
     "next": "^8.1.0",
     "next-cookies": "^1.1.3",
     "next-redux-wrapper": "^2.1.0",
